# specl

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  README.md  cleanup_answers.md  expert-specl.skill  install-skill.sh
specl/: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  MC_IMPROVEMENTS_PROGRESS.md  OVERNIGHT_WORK_LOG.md  README.md  cliff.toml  mutants.toml  proof_lemma_0.smt2
specl/.github/workflows/: ci.yml  release.yml
specl/benchmarks/: Counters.cfg  Counters.tla  Counters_bench.cfg  StressEval.tla  StressHash.cfg  StressHash.tla  baseline-results.txt  baseline.sh  bench.sh  bench_e2e.sh  pgo-build.sh
specl/benchmarks/comparison/: EWD840.cfg  EWD840.tla  RaftMongo.cfg  RaftMongo.tla  TCommit.cfg  run_benchmark.sh  run_realistic_benchmark.sh
specl/crates/specl-cli/: Cargo.toml  build.rs
specl/crates/specl-cli/src/: main.rs
specl/crates/specl-cli/tests/: examples_integration.rs  regression_integration.rs
specl/crates/specl-eval/: Cargo.toml
specl/crates/specl-eval/src/: bytecode.rs  eval.rs  lib.rs  value.rs
specl/crates/specl-ir/: Cargo.toml
specl/crates/specl-ir/src/: analyze.rs  compile.rs  from_ts.rs  ir.rs  lib.rs
specl/crates/specl-ir/tests/: from_ts_integration.rs
specl/crates/specl-lsp/: Cargo.toml
specl/crates/specl-lsp/src/: main.rs
specl/crates/specl-mc/: Cargo.toml
specl/crates/specl-mc/benches/: model_check.rs
specl/crates/specl-mc/src/: bloom.rs  cache.rs  direct_eval.rs  explorer.rs  fpset.rs  lib.rs  state.rs  store.rs  tree_table.rs
specl/crates/specl-soundness/: Cargo.toml
specl/crates/specl-soundness/src/: lib.rs
specl/crates/specl-soundness/tests/: constraint_monotonicity.rs  counterexample_validation.rs  internal_consistency.rs  minispec_backend_agreement.rs  prettyprint_semantics.rs  richspec_proptest.rs  symbolic_agreement.rs  track2_minispec_proptest.rs  track4_internal_consistency.rs  track4_roundtrip_proptest.rs  track5_richspec_proptest.rs  vm_edge_cases.rs
specl/crates/specl-symbolic/: Cargo.toml
specl/crates/specl-symbolic/src/: bmc.rs  encoder.rs  fixedpoint.rs  golem.rs  ic3.rs  inductive.rs  k_induction.rs  lib.rs  portfolio.rs  smart.rs  state_vars.rs  trace.rs  transition.rs
specl/crates/specl-symbolic/tests/: integration.rs
specl/crates/specl-syntax/: Cargo.toml
specl/crates/specl-syntax/src/: ast.rs  lexer.rs  lib.rs  parser.rs  pretty.rs  (+1 more)
specl/crates/specl-tla/: Cargo.toml
specl/crates/specl-ts/: Cargo.toml
specl/crates/specl-types/: Cargo.toml
specl/docs/: competitive-landscape.md  performance-analysis-bronson-avl.md  performance-analysis.md  performance-audit-2026-03.md
specl/editors/vscode/: .gitignore  README.md  language-configuration.json  package-lock.json  package.json  tree-sitter-specl.wasm
specl/examples/: README.md  counter.ts.json
specl/examples/benchmark/: cache-coherence.specl  counters.specl  leader-election.specl  token-ring.specl
specl/examples/easy/: BankingRecords.specl  Bunny2.specl  DieHard.specl  DistributedCounter.specl  ProcessStates.specl  TrafficLight.specl  bunny.md  test_func_powerset.specl
specl/examples/other/: ABProtocol.specl  AsyncTerminationDetection.specl  BankingRecords.specl  Bunny1.specl  Bunny2.specl  ChainReplication.specl  ChandyLamport.cfg  Counter.specl  DieHard.specl  DistributedCounter.specl  EWD840.specl  Mutex.specl  ProcessStates.specl  RaftMongo.specl  ReaderWriter.specl  SeqTest.specl  SimpleConsensus.specl  SimpleQueue.specl  TCommit_Simple.specl  TokenRing.specl  TokenRing_Simple.specl  TrafficLight.specl  Transfer.specl  TwoPhaseCommit.specl  abd.specl  anti-entropy.specl  atomic-broadcast.specl  barrier.specl  bulkhead.specl  byzantine-generals.specl  chain-replication.specl  chandy-lamport.specl  chandy-misra.specl  cigarette-smokers.specl  circuit-breaker.specl  clh-lock.specl  comet.tla  consistent-hashing.specl  counters.specl  crash-consensus.specl  (+92 more)
specl/examples/realistic/: ABProtocol.specl  AsyncTerminationDetection.specl  ChainReplication.specl  Mutex.specl  RaftMongo.specl  ReaderWriter.specl  SimpleConsensus.specl  SimpleQueue.specl  TokenRing.specl  narwhal_tusk.specl
specl/examples/regression/: issue-69-in-operator-in-quantifier-body.specl  issue-70-in-operator-untyped-func-param.specl  issue-72-not-in-operator.specl  issue-73-type-inference-builtins.specl
specl/examples/semaphores/: barrier.specl  cigarette_smokers.specl  dining_philosophers.specl  h2o.specl  mutex.specl  readers_writers.specl  unisex_bathroom.specl
specl/examples/showcase/: Raft.tla  TwoPhaseCommit.specl  aba-problem.specl  abd.specl  anti-entropy.specl  atomic-broadcast.specl  auxiliary-test.specl  bakery.specl  barrier.specl  berkeley-clock-sync.specl  bounded-buffer.specl  bulkhead.specl  bully-election.specl  byzantine-generals.specl  cas-register.specl  causal-broadcast.specl  chain-replication.specl  chandy-lamport.specl  chandy-misra.specl  cigarette-smokers.specl  circuit-breaker.specl  clh-lock.specl  comet.cfg  comet.specl  consistent-hashing.specl  crash-consensus.specl  crdt-flag.specl  crdt-set.specl  cristian-clock-sync.specl  dekker.specl  dining-savages.specl  double-checked-locking.specl  epaxos.specl  epaxos_bug.specl  epaxos_fix.specl  epaxos_full.specl  epoch-reclamation.specl  exponential-backoff.specl  features.specl  fifo-broadcast.specl  (+85 more)
specl/fuzz/: Cargo.toml
specl/fuzz/fuzz_targets/: check_model.rs  full_pipeline.rs  parse.rs  parse_typecheck.rs
specl/research/llm-web3-bug-hunting/: 01-ai-fuzzing-vuln-hunting-landscape.md  02-model-checker-backends.md  03-systems-reference-table.md
specl/scripts/: build-pgo.sh  release.sh
specl/tools/: migrate-semicolons.py
specl/tools/discover/: .gitignore  llm.py  main.py  population.py  pyproject.toml  specl_runner.py
specl/tree-sitter-specl/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
specl/tree-sitter-specl/queries/: highlights.scm  indents.scm  locals.scm
specl/tree-sitter-specl/src/: grammar.json  node-types.json  parser.c
(+127 files in other folders)
