[workspace]
resolver = "2"
members = [
    "crates/specl-syntax",
    "crates/specl-types",
    "crates/specl-ir",
    "crates/specl-eval",
    "crates/specl-mc",
    "crates/specl-tla",
    "crates/specl-symbolic",
    "crates/specl-cli",
    "crates/specl-lsp",
]
exclude = [
    "tree-sitter-specl",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"
authors = ["Daniel"]
repository = "https://github.com/danwt/specl"

[workspace.dependencies]
# Internal crates
specl-syntax = { path = "crates/specl-syntax", version = "0.1.0" }
specl-types = { path = "crates/specl-types", version = "0.1.0" }
specl-ir = { path = "crates/specl-ir", version = "0.1.0" }
specl-eval = { path = "crates/specl-eval", version = "0.1.0" }
specl-mc = { path = "crates/specl-mc", version = "0.1.0" }
specl-tla = { path = "crates/specl-tla", version = "0.1.0" }
specl-symbolic = { path = "crates/specl-symbolic", version = "0.1.0" }

# Core
thiserror = "1"
smallvec = "1"
num-bigint = "0.4"
blake3 = "1"
ahash = "0.8"
rand = "0.8"

# Concurrency
dashmap = "6"
crossbeam = "0.8"
parking_lot = "0.12"
rayon = "1.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
miette = { version = "7", features = ["fancy"] }
notify = "6"

# System
memory-stats = "1"

# Testing
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
lto = "thin"
codegen-units = 1
