[package]
name = "specl-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Expression evaluator for Specl"

[dependencies]
specl-ir.workspace = true
num-bigint.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
