[package]
name = "specl-eval"
version.workspace = true
edition.workspace = true
license-file = "../../../LICENSE"
authors.workspace = true
repository.workspace = true
description = "Expression evaluator for Specl"

[dependencies]
specl-ir.workspace = true
num-bigint.workspace = true
thiserror.workspace = true

[features]
trace-fallbacks = []

[dev-dependencies]
proptest.workspace = true
