[package]
name = "specl-ir"
version.workspace = true
edition.workspace = true
license-file = "../../../LICENSE"
authors.workspace = true
repository.workspace = true
description = "Intermediate representation for Specl"

[dependencies]
specl-syntax.workspace = true
specl-types.workspace = true
specl-ts.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
specl-eval.workspace = true
specl-mc.workspace = true
