[package]
name = "specl-lsp"
version.workspace = true
edition.workspace = true
license-file = "../../../LICENSE"
authors.workspace = true
repository.workspace = true
description = "Language Server Protocol implementation for Specl"

[[bin]]
name = "specl-lsp"
path = "src/main.rs"

[dependencies]
specl-syntax.workspace = true
specl-types.workspace = true
specl-ir.workspace = true
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
ropey = "1"
tracing.workspace = true
tracing-subscriber.workspace = true
