[package]
name = "specl-syntax"
version.workspace = true
edition.workspace = true
license-file = "../../../LICENSE"
authors.workspace = true
repository.workspace = true
description = "Lexer, parser, and AST for the Specl specification language"

[dependencies]
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
