[package]
name = "specl-tla"
version.workspace = true
edition.workspace = true
license-file = "../../../LICENSE"
authors.workspace = true
repository.workspace = true
description = "TLA+ parser and translator to Specl"

[dependencies]
specl-syntax.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
