[package]
name = "specl-ts"
version.workspace = true
edition.workspace = true
license-file = "../../../LICENSE"
authors.workspace = true
repository.workspace = true
description = "Generic transition system IR for Specl model checker"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
