[package]
name = "specl-types"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Type system and type checker for Specl"

[dependencies]
specl-syntax.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
